2011-04-12  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by James Robinson.

        [chromium] Adding layout test for:
        https://bugs.webkit.org/show_bug.cgi?id=58397

        * platform/chromium-gpu-mac/platform/chromium/compositing/child-layer-3d-sorting-expected.checksum: Added.
        * platform/chromium-gpu-mac/platform/chromium/compositing/child-layer-3d-sorting-expected.png: Added.
        * platform/chromium-gpu-mac/platform/chromium/compositing/child-layer-3d-sorting-expected.txt: Added.
        * platform/chromium/compositing/child-layer-3d-sorting.html: Added.
        * platform/chromium/test_expectations.txt:
2011-04-12  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by James Robinson.

        [chromium] Move the calculation of the layer's z coordinate to the
        right spot so that it can be picked up by its sublayers.
        https://bugs.webkit.org/show_bug.cgi?id=58397

        Test: platform/chromium/compositing/child-layer-3d-sorting.html

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::updatePropertiesAndRenderSurfaces):

Canonical link: https://commits.webkit.org/73451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83694 268f45cc-cd09-0410-ab3c-d52691b4dbfc